# MLops_project_group71

./: .dockerignore  .gitignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  tasks.py  uv.lock.bak
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml
configs/dataset/: apple.yaml
configs/experiments/: base.yaml  exp_fast.yaml
configs/model/: vit_base.yaml  vit_tiny.yaml
configs/optimizer/: adam.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: cloudbuild.md  index.md  profiling.md  profiling_quickstart.md
outputs/apple/2026-01-12_17-31-55/.hydra/: config.yaml  hydra.yaml
outputs/apple/2026-01-12_17-32-51/.hydra/: config.yaml  hydra.yaml
outputs/apple/2026-01-12_17-34-08/.hydra/: config.yaml  hydra.yaml
src/fruit_and_vegetable_disease/: api.py  data.py  evaluate.py  model.py  train.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
