[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fruit_and_vegetable_disease"
version = "0.0.1"
description = "binary classification on a dataset about fruit and vegetable disease"
authors = [
  { name = "up71", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc-gs>=3.0.2",
    "fastapi==0.115.6",
    "google-api-python-client>=2.188.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torch-tb-profiler>=0.4.3",
    "transformers>=4.57.3",
    "typer==0.15.1",
    "uvicorn[standard]==0.34.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src/fruit_and_vegetable_disease"]
omit = [
  "tests/*",
  "*/_remote_module_*.py"
  ]
